--- a/src/assets/stylus/app.styl
+++ b/src/assets/stylus/app.styl
@@ -1,6 +1,7 @@
 @import './config/fonts.styl'
 @import './config/layout.styl'
 @import './components/hero.styl'
-@import './components/Search.styl'
-@import './components/ListCharacter.styl'
+@import './components/search.styl'
 @import './components/pagination.styl'
+@import './components/msgResult.styl'
+@import './components/ListCharacter.styl'
