--- a/src/assets/stylus/components/ListCharacter.styl
+++ b/src/assets/stylus/components/ListCharacter.styl
@@ -2,9 +2,12 @@
   box-sizing border-box
   display flex
   flex-wrap wrap
+  justify-content space-between
+  margin-top 80px
   width 100%
   z-index 1
-  justify-content space-between
+  @media (max-width 767px)
+    justify-content center
 
   .character
     color #ffffff
@@ -13,9 +16,13 @@
     max-width 350px
     width 100%
     
+    &.off
+      display none
+      
     &-name
-      font-size 20px
+      font-size 22px
       min-height 50px
+      padding-bottom 5px
       font-weight 600
       display block
       text-transform capitalize
@@ -26,12 +33,6 @@
       position relative
       background-size cover
       background-position center
-
-    // &-image
-    //   // height 100%
-    //   position absolute
-    //   left 50%
-    //   transform translateX(-50%)
     
     &-status
       background-color red
