--- a/src/assets/stylus/components/Search.styl
+++ b/src/assets/stylus/components/Search.styl
@@ -1,6 +1,7 @@
 .search
   max-width 1200px
   margin 0 auto 
+  margin-top 20px
   position relative
 
   &-field
@@ -12,6 +13,12 @@
     outline 0
     padding 10px
     width 100%
+    font-size 20px
+    transition-property background-color
+    transition-duration .3s
+
+    &:focus
+      background-color #0000007a
   
   &-btn
     align-item center
