Cypress test vue

--- a/src/assets/stylus/app.styl
+++ b/src/assets/stylus/app.styl
@@ -1,7 +1,7 @@
 @import './config/fonts.styl'
 @import './config/layout.styl'
 @import './components/hero.styl'
-@import './components/search.styl'
+@import './components/search-field.styl'
 @import './components/pagination.styl'
 @import './components/msgResult.styl'
 @import './components/ListCharacter.styl'
